# eesc-aero-embedded-systems

./: .gitignore  .gitmodules  CMakeLists.txt  ManoplaLelyBBB.cpp  ManoplaLelyBBB.h  README.general.md  README.md  REAME.pid.md  arma-col-test  arma-col-test.cpp  canopen-manual.sh  codigo_comentado.txt  config_def_header.h  datadriven_modeling.py  epos_com_motorzao_limitado_5000.eds  main.cpp  master-dcf-motorzao-current-5000.dcf  master-dcfgen.yml
dockerfile/: Dockerfile
lely-libs/: liblely-can.la  liblely-can.so.1  liblely-can.so.1.9.2  liblely-co.la  liblely-co.so.2.3.0  liblely-coapp.la  liblely-coapp.so.2  liblely-ev.la  liblely-ev.so.2  liblely-ev.so.2.3.0  liblely-io.la  liblely-io.so.1.9.2  liblely-io2.la  liblely-io2.so.2.3.0  liblely-libc.la  liblely-libc.so.2.3.0  liblely-tap.la  liblely-tap.so.2.3.0  liblely-util.la  liblely-util.so.2.3.0
lely-libs/pkgconfig/: liblely-can.pc  liblely-co.pc  liblely-coapp.pc  liblely-ev.pc  liblely-io.pc  liblely-io2.pc  liblely-libc.pc  liblely-libc_rt.pc  liblely-tap.pc  liblely-util.pc
utils/: json.h  utils.cpp  utils.h
